fix(responsive): adjust font size for better readability on mobile

--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,7 @@ button {
 
   --font-size-30: 3rem;
   --font-size-28: 2.8rem;
+  --font-size-26: 2.6rem;
   --font-size-14: 1.4rem;
   --weight-semibold: 600;
 
@@ -174,6 +175,10 @@ body {
   transition: all 0.2 ease-in;
   font-size: var(--font-size-30);
 
+  @media (max-width: 550px) {
+    font-size: var(--font-size-26);
+  }
+
   &.player1-color {
     color: var(--player1-color);
   }
@@ -251,4 +256,5 @@ body {
   color: var(--cell-shadow-hover-bg);
   text-transform: uppercase;
 }
+
 
